# Gamebox

./: .envrc.license  .gitignore  .pre-commit-config.yaml  Cargo.lock.license  Cargo.toml  Cross.toml  README.md  cog.toml  default.nix  flake.lock.license  flake.nix  gamebox.nix  steam-toybox.nix
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci-debug-builds-linux.yml  ci-debug-builds-mac.yml  ci-debug-builds.yml  ci-nix-pm-tests.yml  ci-release-builds-linux.yml  ci-release-builds-mac.yml  ci-releases.yml  ci-tests-linux.yml  ci-tests-mac.yml  ci-tests.yml  clean-old-workflow-runs.yml  update-flatpak-cargo-file.yml  verify-pr-commit.yml  verify-reuse-compliance.yml
build-aux/: com.valvesoftware.Steam.Utility.gamebox.json  com.valvesoftware.Steam.Utility.gamebox.metainfo.xml  generated-sources.json
data/: com.valvesoftware.Steam.Utility.gamebox.desktop
src/: main.rs
