# SPDX-FileCopyrightText: 2024 The Gamebox Developers
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "gamebox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gamebox"
path = "src/main.rs"

[features]
default = ["steam", "gpd", "steam-deck"]
steam-deck = []
gpd = []
steam = ["steamid-ng", "steamlocate", "steamworks", "proton"]
proton = ["ge-man", "proton-call"]

[dependencies]
anyhow = "1.0.89"
diesel = { version = "2.2.4", features = ["sqlite"] }
env_logger = "0.11.5"
extism = "^1.6.0"
iced = "0.13.1"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
steamid-ng = { version = "1.0.0", optional = true }
steamlocate = { version = "1.2.1", features = ["steamid_ng"], optional = true }
steamworks = { version = "0.11.0", features = ["serde"], optional = true }
proton-call = { version = "3.1.2", optional = true }
ge-man = { version = "0.1.3", optional = true }
