# SPDX-FileCopyrightText: 2024 The Gamebox Developers
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "gamebox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gamebox"
path = "src/main.rs"

[features]
default = ["steam", "gpd", "steam-deck"]
steam-deck = []
gpd = []
steam = ["steamid-ng", "steamlocate", "steamworks", "proton"]
proton = ["ge-man", "proton-call"]

[dependencies]
anyhow = "1.0.100"
diesel = { version = "2.2.12", features = ["sqlite"] }
env_logger = "0.11.6"
extism = "^1.12.0"
iced = "0.13.1"
log = "0.4.28"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
steamid-ng = { version = "2.0.0", optional = true }
steamlocate = { version = "1.2.1", features = ["steamid_ng"], optional = true }
steamworks = { version = "0.11.0", features = ["serde"], optional = true }
proton-call = { version = "3.1.2", optional = true }
ge-man = { version = "0.1.3", optional = true }
